--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ using data.</p>
 <p>Statistical methodology should be driven by applied problems which I
 try to reflect in my approach to research.</p>
 
-<p>Keywords: applied biology, causality, dynamical systems, independence
+<p><em>Keywords:</em> applied biology, causality, dynamical systems, independence
 testing, kernel methods, time series</p>
 
 <h3 id="news">News</h3>
