--- a/index.html
+++ b/index.html
@@ -84,9 +84,18 @@ try to reflect in my approach to research.</p>
 <p><em>Keywords:</em> applied biology, causality, dynamical systems, independence
 testing, kernel methods, time series</p>
 
+<h3 id="open-positions">Open Positions</h3>
+
+<p>If you interested in doing a PhD or postdoc in statistics, please send me an email.</p>
+
+<p>The current PhD call can be found <a href="https://www.math.ku.dk/english/about/jobs/phd-stipends-in-statistics-and-the-mathematics-of-insurance-and-economics-sept.21/">here</a>.</p>
+
 <h3 id="news">News</h3>
 
 <ul>
+  <li>Sept 2020: <a href="https://sorawitj.github.io/">Sorawit
+Saengkyongam</a>
+started his PhD position supervised by Jonas Peters and myself.</li>
   <li>Jan 2020: Started position as Assistant Professor at the Unversity
 of Copenhagen.</li>
 </ul>
