--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@ testing, kernel methods, time series</p>
 
 <p>If you interested in doing a PhD or postdoc in statistics, please send me an email.</p>
 
-<p>The current PhD call can be found <a href="https://www.math.ku.dk/english/about/jobs/phd-stipends-in-statistics-and-the-mathematics-of-insurance-and-economics-sept.21/">here</a>.</p>
+<!---
+The current PhD call can be found [here](https://www.math.ku.dk/english/about/jobs/phd-stipends-in-statistics-and-the-mathematics-of-insurance-and-economics-sept.21/).
+--->
 
 <h3 id="news">News</h3>
 
