--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
                 <p><img class="profile-picture" src="download/profile_pic.jpg" /></p>
 
 <p>Assistant Professor of Statistics<br />
+<a href="https://cocala.github.io/">Copenhagen Causality Lab</a>__
 <a href="https://www.math.ku.dk/english/">Department of Mathematical Sciences</a>, <a href="https://www.ku.dk/english/">University of Copenhagen</a></p>
 
 <h3 id="research">Research</h3>
@@ -86,7 +87,9 @@ testing, kernel methods, time series</p>
 
 <h3 id="open-positions">Open Positions</h3>
 
-<p>If you interested in doing a PhD or postdoc in statistics, please send me an email.</p>
+<p>Open position are annouced via the <a href="https://www.math.ku.dk/english/about/jobs/">official deparment
+calls</a>. If you have any
+questions, please send me an email.</p>
 
 <!---
 The current PhD call can be found [here](https://www.math.ku.dk/english/about/jobs/phd-stipends-in-statistics-and-the-mathematics-of-insurance-and-economics-sept.21/).
@@ -95,6 +98,7 @@ The current PhD call can be found [here](https://www.math.ku.dk/english/about/jo
 <h3 id="news">News</h3>
 
 <ul>
+  <li>July 2021: Launched the <a href="https://learningbydoingcompetition.github.io/">Learning by Doing - NeurIPS 2021 Competition</a>.</li>
   <li>Sept 2020: <a href="https://sorawitj.github.io/">Sorawit
 Saengkyongam</a>
 started his PhD position under Jonas Peters and my supervision.</li>
