--- a/publications.html
+++ b/publications.html
@@ -73,10 +73,7 @@
     <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></p>
   </li>
   <li>
-    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2020.08.20.222968v2">https://www.biorxiv.org/content/10.1101/2020.08.20.222968v1</a></p>
-  </li>
-  <li>
-    <p>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></p>
+    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2020.08.20.222968v2">https://www.biorxiv.org/content/10.1101/2020.08.20.222968v2</a></p>
   </li>
   <li>
     <p>J. Peters, S.Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></p>
@@ -85,6 +82,7 @@
 
 <h3 id="2021">2021</h3>
 <ul>
+  <li>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></li>
   <li>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics (Accepted). Preprint <a href="https://arxiv.org/abs/1911.01850">https://arxiv.org/abs/1911.01850</a>
     <ul>
       <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
