--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="container content">
                 <p><img class="profile-picture" src="download/profile_pic.jpg" /></p>
 
-<p>Assistant Professor of Statistics<br />
-<a href="https://cocala.github.io/">Copenhagen Causality Lab</a>__
+<p>Assistant Professor of Statistics\
+<a href="https://cocala.github.io/">Copenhagen Causality Lab</a>\
 <a href="https://www.math.ku.dk/english/">Department of Mathematical Sciences</a>, <a href="https://www.ku.dk/english/">University of Copenhagen</a></p>
 
 <h3 id="research">Research</h3>
