--- a/publications.html
+++ b/publications.html
@@ -80,13 +80,13 @@
 <h3 id="2021">2021</h3>
 <ul>
   <li>
-    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems (Accepted). <a href="https://authors.elsevier.com/c/1dx4a8YyDffJIs">https://authors.elsevier.com/c/1dx4a8YyDffJIs</a></p>
+    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems (Accepted). <a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a></p>
   </li>
   <li>
     <p>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></p>
   </li>
   <li>
-    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics (Accepted). Preprint <a href="https://arxiv.org/abs/1911.01850">https://arxiv.org/abs/1911.01850</a></p>
+    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3):1220-1246. <a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a></p>
     <ul>
       <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
     </ul>
