--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,9 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
+  </li>
+  <li>
     <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. Preprint <a href="https://arxiv.org/abs/2106.00808">https://arxiv.org/abs/2106.00808</a></p>
   </li>
   <li>
