--- a/publications.html
+++ b/publications.html
@@ -67,6 +67,9 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
+    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. Preprint <a href="https://arxiv.org/pdf/2202.01864.pdf">https://arxiv.org/pdf/2202.01864.pdf</a></p>
+  </li>
+  <li>
     <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
   </li>
   <li>
@@ -75,9 +78,11 @@
   <li>
     <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></p>
   </li>
-  <li>
-    <p>J. Peters, S.Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></p>
-  </li>
+</ul>
+
+<h3 id="2022">2022</h3>
+<ul>
+  <li>J. Peters, S.Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (to appear). Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></li>
 </ul>
 
 <h3 id="2021">2021</h3>
