--- a/reviewing.html
+++ b/reviewing.html
@@ -69,9 +69,11 @@
 <ul>
   <li>Annals of Statistics</li>
   <li>Biometrika</li>
+  <li>Computational and Structural Biotechnology Journal</li>
   <li>Communications in Statistics</li>
   <li>Electronic Journal of Statistics</li>
   <li>Genetic Epidemiology</li>
+  <li>Journal of Causal Inference</li>
   <li>Journal of Computational and Graphical Statistics</li>
   <li>Journal of the American Statistical Association</li>
   <li>Journal of Machine Learning Research</li>
@@ -83,6 +85,13 @@
 </ul>
 
 <h3 id="conferences">Conferences</h3>
+
+<h4 id="area-chair">Area Chair</h4>
+<ul>
+  <li>International Conference on Artificial Intelligence and Statistics (AISTATS2022)</li>
+</ul>
+
+<h4 id="reviewing">Reviewing</h4>
 
 <ul>
   <li>Conference on Neural Information Processing Systems (NIPS)</li>
