--- a/publications.html
+++ b/publications.html
@@ -82,7 +82,12 @@
 
 <h3 id="2022">2022</h3>
 <ul>
-  <li>J. Peters, S.Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (to appear). Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></li>
+  <li>
+    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (to appear). Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></p>
+  </li>
+  <li>
+    <p>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competition and Demonstration Track, Proceedings of Machine Learning Research (to appear). Preprint <a href="https://arxiv.org/abs/2202.06052">https://arxiv.org/abs/2202.06052</a>.</p>
+  </li>
 </ul>
 
 <h3 id="2021">2021</h3>
@@ -93,12 +98,8 @@
   <li>
     <p>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></p>
   </li>
-  <li>
-    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3):1220-1246. <a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a></p>
-    <ul>
-      <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
-    </ul>
-  </li>
+  <li>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3):1220-1246. <a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a></li>
+  <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
 </ul>
 
 <h3 id="2019">2019</h3>
@@ -120,11 +121,8 @@
 <h3 id="2018">2018</h3>
 
 <ul>
-  <li>N. Pfister, P. Bühlmann, B. Schölkopf, J. Peters: <em>Kernel-based Tests for Joint Independence</em>. Journal of the Royal Statistical Society: Series B, 80(1), 5-31.<br /><a href="http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full">http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full</a>
-    <ul>
-      <li><a href="download/supplementary_code.tar.gz">Supplementary code</a></li>
-    </ul>
-  </li>
+  <li>N. Pfister, P. Bühlmann, B. Schölkopf, J. Peters: <em>Kernel-based Tests for Joint Independence</em>. Journal of the Royal Statistical Society: Series B, 80(1), 5-31.<br /><a href="http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full">http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full</a></li>
+  <li><a href="download/supplementary_code.tar.gz">Supplementary code</a></li>
 </ul>
 
 <h3 id="theses">Theses</h3>
