--- a/teaching.html
+++ b/teaching.html
@@ -65,7 +65,10 @@
         
             <div class="container content">
                 <h3 id="course-responsible">Course Responsible</h3>
+
 <ul>
+  <li><a href="https://kurser.ku.dk/course/nmak20004u/2021-2022">Statistics B</a> (Block III - 2021/2022)</li>
+  <li><a href="https://kurser.ku.dk/course/nmaa05083u/2021-2022">Stochastic Processes</a> (Block II - 2021/2022)</li>
   <li><a href="https://kurser.ku.dk/course/nmak20004u/2020-2021">Statistics B</a> (Block III - 2020/2021)</li>
   <li><a href="https://kurser.ku.dk/course/nmaa05083u/2020-2021">Stochastic Processes</a> (Block II - 2020/2021)</li>
   <li><a href="https://kurser.ku.dk/course/nmaa13025u/2019-2020">Theoretical Statistics</a> (Block IV - 2019/2020)</li>
