--- a/publications.html
+++ b/publications.html
@@ -67,7 +67,10 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
-    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. Preprint <a href="https://arxiv.org/pdf/2202.01864.pdf">https://arxiv.org/pdf/2202.01864.pdf</a></p>
+    <p>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. Preprint <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a></p>
+  </li>
+  <li>
+    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. Preprint <a href="https://arxiv.org/abs/2202.01864">https://arxiv.org/abs/2202.01864</a></p>
   </li>
   <li>
     <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
