--- a/publications.html
+++ b/publications.html
@@ -67,10 +67,7 @@
                 <h3 id="preprints">Preprints</h3>
 <ul>
   <li>
-    <p>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. Preprint <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a></p>
-  </li>
-  <li>
-    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. Preprint <a href="https://arxiv.org/abs/2202.01864">https://arxiv.org/abs/2202.01864</a></p>
+    <p>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></p>
   </li>
   <li>
     <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
@@ -85,6 +82,13 @@
 
 <h3 id="2022">2022</h3>
 <ul>
+  <li>
+    <p>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>.  In Proceedings of the 38th Annual Conference on
+Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a></p>
+  </li>
+  <li>
+    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML) (accepted). Preprint <a href="https://arxiv.org/abs/2202.01864">https://arxiv.org/abs/2202.01864</a></p>
+  </li>
   <li>
     <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (to appear). Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></p>
   </li>
