--- a/reviewing.html
+++ b/reviewing.html
@@ -77,9 +77,11 @@
   <li>Journal of Computational and Graphical Statistics</li>
   <li>Journal of the American Statistical Association</li>
   <li>Journal of Machine Learning Research</li>
+  <li>Journal of Machine Learning Research: Machine Learning Open Source Software</li>
   <li>Journal of the Royal Statistical Society (Series B)</li>
   <li>Metrika</li>
   <li>R Journal</li>
+  <li>Scientific Reports</li>
   <li>Statistical Science</li>
   <li>Statistics and Computing</li>
 </ul>
