--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@ Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https
     <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML) (accepted). Preprint <a href="https://arxiv.org/abs/2202.01864">https://arxiv.org/abs/2202.01864</a></p>
   </li>
   <li>
-    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (to appear). Preprint <a href="https://arxiv.org/abs/2001.06208">https://arxiv.org/abs/2001.06208</a></p>
+    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (pp. 671-690). Preprint <a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a></p>
   </li>
   <li>
     <p>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competition and Demonstration Track, Proceedings of Machine Learning Research (to appear). Preprint <a href="https://arxiv.org/abs/2202.06052">https://arxiv.org/abs/2202.06052</a>.</p>
@@ -105,8 +105,12 @@ Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https
   <li>
     <p>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></p>
   </li>
-  <li>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3):1220-1246. <a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a></li>
-  <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
+  <li>
+    <p>N. Pfister, E. Williams, R. Aebersold, P. Bühlmann: <em>Stabilizing Variable Selection and Regression</em>. Annals of Applied Statistics, 15(3):1220-1246. <a href="https://doi.org/10.1214/21-AOAS1487">https://doi.org/10.1214/21-AOAS1487</a></p>
+    <ul>
+      <li><a href="download/SR_supplementary_code.zip">Supplementary code</a></li>
+    </ul>
+  </li>
 </ul>
 
 <h3 id="2019">2019</h3>
@@ -128,8 +132,11 @@ Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https
 <h3 id="2018">2018</h3>
 
 <ul>
-  <li>N. Pfister, P. Bühlmann, B. Schölkopf, J. Peters: <em>Kernel-based Tests for Joint Independence</em>. Journal of the Royal Statistical Society: Series B, 80(1), 5-31.<br /><a href="http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full">http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full</a></li>
-  <li><a href="download/supplementary_code.tar.gz">Supplementary code</a></li>
+  <li>N. Pfister, P. Bühlmann, B. Schölkopf, J. Peters: <em>Kernel-based Tests for Joint Independence</em>. Journal of the Royal Statistical Society: Series B, 80(1), 5-31.<br /><a href="http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full">http://onlinelibrary.wiley.com/doi/10.1111/rssb.12235/full</a>
+    <ul>
+      <li><a href="download/supplementary_code.tar.gz">Supplementary code</a></li>
+    </ul>
+  </li>
 </ul>
 
 <h3 id="theses">Theses</h3>
