--- a/publications.html
+++ b/publications.html
@@ -90,7 +90,7 @@ Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https
     <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML) (accepted). Preprint <a href="https://arxiv.org/abs/2202.01864">https://arxiv.org/abs/2202.01864</a></p>
   </li>
   <li>
-    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (pp. 671-690). Preprint <a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a></p>
+    <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (pp. 671-690). <a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a></p>
   </li>
   <li>
     <p>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competition and Demonstration Track, Proceedings of Machine Learning Research (to appear). Preprint <a href="https://arxiv.org/abs/2202.06052">https://arxiv.org/abs/2202.06052</a>.</p>
@@ -100,7 +100,7 @@ Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https
 <h3 id="2021">2021</h3>
 <ul>
   <li>
-    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems (Accepted). <a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a></p>
+    <p>E. G. Williams, N. Pfister, S. Roy, C. Statzer, J. Haverty, J. Ingels, C. Bohl, M. Hasan, J. Cuklina, P. Bühlmann, N. Zamboni, L. Lu, C. Y. Ewald, R. W. Williams, R. Aebersold: <em>Multi-Omic Profiling of the Liver Across Diets and Age in a Diverse Mouse Population</em>. Cell Systems, 13(1), 43-57. <a href="https://doi.org/10.1016/j.cels.2021.09.005">https://doi.org/10.1016/j.cels.2021.09.005</a></p>
   </li>
   <li>
     <p>R. Christiansen, N. Pfister, M. Jakobsen, N. Gnecco, J. Peters: <em>A Causal Framework for Distribution Generalization</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2006.07433">https://arxiv.org/abs/2006.07433</a></p>
