--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ The current PhD call can be found [here](https://www.math.ku.dk/english/about/jo
 <h3 id="news">News</h3>
 
 <ul>
+  <li>Oct 2022: <a href="https://www.arlundborg.com/">Anton Rask Lundborg</a> started a postdoc.</li>
+  <li>Oct 2022: <a href="https://www.math.ku.dk/english/about/news/new-names/margherita-lazzaretto-phd-student/">Margherita Lazzaretto</a> has started her PhD position.</li>
   <li>Oct 2021: I was awarded an <a href="https://datascience.novonordiskfonden.dk/projects/causalbiome-developing-a-unified-statistical-framework-for-analyzing-microbiome-data/">Emerging Investigator grant</a> by the Novo Nordisk Foundation for my project <em>CausalBiome: Developing a unified statistical framework for analyzing microbiome data</em>.</li>
   <li>Sept 2021: <a href="https://www.math.ku.dk/english/about/news/new-names/shimeng-huang-phd-student/">Shimeng Huang</a> has started her PhD position.</li>
   <li>July 2021: Launched the <a href="https://learningbydoingcompetition.github.io/">Learning by Doing - NeurIPS 2021 Competition</a>.</li>
