--- a/publications.html
+++ b/publications.html
@@ -70,12 +70,6 @@
     <p>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></p>
   </li>
   <li>
-    <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
-  </li>
-  <li>
-    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. Preprint <a href="https://arxiv.org/abs/2106.00808">https://arxiv.org/abs/2106.00808</a></p>
-  </li>
-  <li>
     <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></p>
   </li>
 </ul>
@@ -83,18 +77,23 @@
 <h3 id="2022">2022</h3>
 <ul>
   <li>
-    <p>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>.  In Proceedings of the 38th Annual Conference on
-Uncertainty in Artificial Intelligence (UAI) (accepted). Preprint <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a></p>
+    <p>S. Saengkyongam, N. Thams, J. Peters, N. Pfister: <em>Invariant Policy Learning: A causal perspective</em>. IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI) (Accepted). Preprint <a href="https://arxiv.org/abs/2106.00808">https://arxiv.org/abs/2106.00808</a></p>
   </li>
   <li>
-    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML) (accepted). Preprint <a href="https://arxiv.org/abs/2202.01864">https://arxiv.org/abs/2202.01864</a></p>
+    <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. PLOS Computational Biology (Accepted). Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
+  </li>
+  <li>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. In Proceedings of the 38th Annual Conference on
+Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a></li>
+  <li>
+    <p><a href="download/spaceIV_supplementary_code.tar.gz">Supplementary code</a></p>
+  </li>
+  <li>
+    <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML), PMLR 162:18935-18958. <a href="https://proceedings.mlr.press/v162/saengkyongam22a.html">https://proceedings.mlr.press/v162/saengkyongam22a.html</a></p>
   </li>
   <li>
     <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (pp. 671-690). <a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a></p>
   </li>
-  <li>
-    <p>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competition and Demonstration Track, Proceedings of Machine Learning Research (to appear). Preprint <a href="https://arxiv.org/abs/2202.06052">https://arxiv.org/abs/2202.06052</a></p>
-  </li>
+  <li>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competition and Demonstration Track, Proceedings of Machine Learning Research (to appear). Preprint <a href="https://arxiv.org/abs/2202.06052">https://arxiv.org/abs/2202.06052</a></li>
 </ul>
 
 <h3 id="2021">2021</h3>
