--- a/publications.html
+++ b/publications.html
@@ -83,9 +83,10 @@
     <p>A. Ruaud, N. Pfister, R. Ley, N. Youngblut: <em>Interpreting tree ensemble machine learning models with endoR</em>. PLOS Computational Biology (Accepted). Preprint <a href="https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1">https://www.biorxiv.org/content/10.1101/2022.01.03.474763v1</a></p>
   </li>
   <li>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. In Proceedings of the 38th Annual Conference on
-Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a></li>
-  <li>
-    <p><a href="download/spaceIV_supplementary_code.tar.gz">Supplementary code</a></p>
+Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a>
+    <ul>
+      <li><a href="download/spaceIV_supplementary_code.tar.gz">Supplementary code</a></li>
+    </ul>
   </li>
   <li>
     <p>S. Saengkyongam, L. Henckel, N. Pfister, J. Peters: <em>Exploiting Independent Instruments: Identification and Distribution Generalization</em>. In Proceedings of the 39th International Conference on Machine Learning (ICML), PMLR 162:18935-18958. <a href="https://proceedings.mlr.press/v162/saengkyongam22a.html">https://proceedings.mlr.press/v162/saengkyongam22a.html</a></p>
