--- a/publications.html
+++ b/publications.html
@@ -85,7 +85,7 @@
   <li>N. Pfister, J. Peters: <em>Identifiability of Sparse Causal Effects using Instrumental Variables</em>. In Proceedings of the 38th Annual Conference on
 Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href="https://arxiv.org/abs/2203.09380">https://arxiv.org/abs/2203.09380</a>
     <ul>
-      <li><a href="download/spaceIV_supplementary_code.tar.gz">Supplementary code</a></li>
+      <li><a href="download/spaceIV_supplementary_code.zip">Supplementary code</a></li>
     </ul>
   </li>
   <li>
