--- a/publications.html
+++ b/publications.html
@@ -94,7 +94,7 @@ Uncertainty in Artificial Intelligence (UAI), PMLR 180:1613-1622. ArXiv <a href=
   <li>
     <p>J. Peters, S. Bauer, N. Pfister: <em>Causal Models for Dynamical Systems</em>. In Probabilistic and Causal Inference: The Works of Judea Pearl (pp. 671-690). <a href="https://doi.org/10.1145/3501714.3501752">https://doi.org/10.1145/3501714.3501752</a></p>
   </li>
-  <li>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competition and Demonstration Track, Proceedings of Machine Learning Research (to appear). Preprint <a href="https://arxiv.org/abs/2202.06052">https://arxiv.org/abs/2202.06052</a></li>
+  <li>S. Weichwald and S. W. Mogensen, T. E. Lee, D. Baumann, O. Kroemer, I. Guyon, S. Trimpe, J. Peters, N. Pfister: <em>Learning by Doing: Controlling a Dynamical System using Causality, Control, and Reinforcement Learning</em>. Proceedings of the NeurIPS 2021 Competitions and Demonstrations Track, PMLR 176:246-258, 2022. <a href="https://proceedings.mlr.press/v176/weichwald22a.html">https://proceedings.mlr.press/v176/weichwald22a.html</a></li>
 </ul>
 
 <h3 id="2021">2021</h3>
