--- a/reviewing.html
+++ b/reviewing.html
@@ -90,7 +90,7 @@
 
 <h4 id="area-chair">Area Chair</h4>
 <ul>
-  <li>International Conference on Artificial Intelligence and Statistics (AISTATS2022)</li>
+  <li>International Conference on Artificial Intelligence and Statistics (AISTATS2022, AISTATS2023)</li>
 </ul>
 
 <h4 id="reviewing">Reviewing</h4>
