--- a/teaching.html
+++ b/teaching.html
@@ -67,6 +67,8 @@
                 <h3 id="course-responsible">Course Responsible</h3>
 
 <ul>
+  <li><a href="http://web.math.ku.dk/~susanne/BSc/Projects2023blok34">Bachelor Projects in Statistics</a> (Block III/IV - 2022/2023)</li>
+  <li><a href="https://kurser.ku.dk/course/nmak20004u/2022-2023">Statistics B</a> (Block III - 2022/2023)</li>
   <li><a href="https://kurser.ku.dk/course/nmak20004u/2021-2022">Statistics B</a> (Block III - 2021/2022)</li>
   <li><a href="https://kurser.ku.dk/course/nmaa05083u/2021-2022">Stochastic Processes</a> (Block II - 2021/2022)</li>
   <li><a href="https://kurser.ku.dk/course/nmak20004u/2020-2021">Statistics B</a> (Block III - 2020/2021)</li>
