--- a/publications.html
+++ b/publications.html
@@ -66,12 +66,12 @@
             <div class="container content">
                 <h3 id="preprints">Preprints</h3>
 <ul>
-  <li>
-    <p>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></p>
-  </li>
-  <li>
-    <p>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></p>
-  </li>
+  <li>S. Huang, E. Ailer, N. Kilbertus, N. Pfister: <em>Supervised Learning and Model Analysis with Compositional Data</em>. Preprint <a href="https://arxiv.org/abs/2205.07271">https://arxiv.org/abs/2205.07271</a></li>
+</ul>
+
+<h3 id="2023">2023</h3>
+<ul>
+  <li>N. Thams, S. Saengkyongam, N. Pfister, J. Peters: <em>Statistical Testing under Distributional Shifts</em>. Journal of the Royal Statistical Society: Series B (Accepted). Preprint <a href="https://arxiv.org/abs/2105.10821">https://arxiv.org/abs/2105.10821</a></li>
 </ul>
 
 <h3 id="2022">2022</h3>
